--- a/Views/Pizza/Index.cshtml
+++ b/Views/Pizza/Index.cshtml
@@ -1,19 +1,17 @@
-﻿@model IEnumerable<PizzaModel>
+﻿ @model IEnumerable<PizzaModel>
 
 <div class="py-5">
-
     <div class="container">
-
         <div class="text-center mb-5">
-            <a class="btn btn-success" asp-action="Cadastrar" asp-controller="Pizza">Cadastrar</a>
+            <a class="btn btn-success" asp-action="Cadastrar" asp-controller="Pizza">Cadastrar nova pizza!</a>
         </div>
 
-        <div class="row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             @if (Model != null)
             {
-                @if (Model.Count() > 0)
+                if (Model.Any())
                 {
-                    @foreach (var pizza in Model)
+                    foreach (var pizza in Model)
                     {
                         <div class="card mx-3 my-3 p-2" style="width: 12rem">
                             @if (pizza.Capa != null)
@@ -26,16 +24,24 @@
                             }
                             <div class="card-body">
                                 <h5 class="card-title">@pizza.Sabor</h5>
-                            </div>
+                                <p class="card-text">@pizza.Descricao</p>
 
-                            <div class="card-body">
-                                <a class="btn-warning w-100" asp-action="Editar" asp-controller="Pizza" asp-route-id="@pizza.Id">Editar</a>
-                                <a class="btn-danger w-100" asp-action="Remover" asp-controller="Pizza" asp-route-id="@pizza.Id">Remover</a>
+                            </div>
+                            <div class="">
+                                <p class="card-text">R$ @pizza.Valor</p>
+                                </div>
+                            <div class="card-footer">
+                                <div class="btn-group" role="group">
+                                    <a class="btn btn-warning w-100" asp-action="Editar" asp-controller="Pizza" asp-route-id="@pizza.Id">Editar</a>
+                                    <a class="btn btn-danger w-100" asp-action="Remover" asp-controller="Pizza" asp-route-id="@pizza.Id">Remover</a>
+                                </div>
                             </div>
                         </div>
+                    
                     }
                 }
             }
-        </div>
     </div>
 </div>
+</div>
+
