--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<PizzaModel>
+<link href="~/css/autocomplete.css" rel="stylesheet" />
 
 <div class="py-5">
-
     <div class="container">
-
         <div class="text-center mb-5">
-            <form method="get" asp-action="Index" asp-controller="Home" class="d-flex justify-content-center">
-                <input name="pesquisar" class="form-control w-50 mx-2" style="border:1px solid black;" />
+            <form method="get" asp-action="Index" asp-controller="Home" class="d-flex justify-content-center" autocomplete="off">
+                <input id="pesquisar" name="pesquisar" class="form-control w-50 mx-2" style="border:1px solid black;" />
                 <button type="submit" class="btn btn-primary w-10">Pesquisar</button>
             </form>
+            <div id="autocomplete-suggestions" class="autocomplete-suggestions" ></div>
         </div>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0 ">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-0">
             @if (Model != null)
             {
                 if (Model.Count() > 0)
@@ -25,8 +25,8 @@
                             </div>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">Pequena: R$ @pizza.Valor</li>
-                                <li class="list-group-item">Média:   R$ @(pizza.Valor + 15) </li>
-                                <li class="list-group-item">Grande:  R$ @(pizza.Valor + 25)</li>
+                                <li class="list-group-item">Média: R$ @(pizza.Valor + 15)</li>
+                                <li class="list-group-item">Grande: R$ @(pizza.Valor + 25)</li>
                             </ul>
                             <div class="card-body">
                                 <a class="btn btn-primary w-100" style="font-size:16px" asp-action="Detalhes" asp-controller="Pizza" asp-route-id="@pizza.Id">Detalhes</a>
@@ -36,6 +36,6 @@
                 }
             }
         </div>
-
     </div>
 </div>
+<script src="~/js/autocomplete.js"></script>
